--- a/personality_detection_model/previous_paper/replicate_previous_paper.ipynb
+++ b/personality_detection_model/previous_paper/replicate_previous_paper.ipynb
@@ -351,7 +351,7 @@
       },
       "outputs": [],
       "source": [
-        "#%cd personality-prediction"
+        "%cd personality-prediction"
       ]
     },
     {
@@ -398,7 +398,7 @@
         "pred_labels = preds.apply(lambda x: labeling(x))\n",
         "pred_labels.name = \"pred_label\"\n",
         "\n",
-        "pred_labels.to_csv('explogs/test_prediction.csv', index=False)"
+        "pred_labels.to_csv('../outputs/explogs/test_prediction.csv', index=False)"
       ]
     },
     {
@@ -412,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -434,7 +434,7 @@
         "from collections import defaultdict\n",
         "\n",
         "ref_labels = pd.read_csv('data/kaggle/kaggle_test.csv')['type']\n",
-        "pred_labels = pd.read_csv('explogs/test_prediction.csv')['pred_label']\n",
+        "pred_labels = pd.read_csv('../outputs/explogs/test_prediction.csv')['pred_label']\n",
         "\n",
         "cor_dict = defaultdict(int)\n",
         "multi_cor_list = [] # list to store 1 if all dimension are correct, else 0\n",
