Tweak template notebook

--- a/personality_detection_model/prediction_model_template.ipynb
+++ b/personality_detection_model/prediction_model_template.ipynb
@@ -262,7 +262,12 @@
    ],
    "source": [
     "# Model name/path on Hugging Face Hub\n",
-    "model_name_or_path = 'Yuta555/Llama-2-7b-MBTI-classification'\n",
+    "# Choose model you want to use\n",
+    "model_name_or_path = 'Yuta555/Llama-2-7b-MBTI-classification' # 16-class model\n",
+    "#model_name_or_path = 'Yuta555/Llama-2-7b-MBTI-binary-clf-1st' # Binary model 1st dimension (E/I)\n",
+    "#model_name_or_path = 'Yuta555/Llama-2-7b-MBTI-binary-clf-2nd' # Binary model 2nd dimension (N/S)\n",
+    "#model_name_or_path = 'Yuta555/Llama-2-7b-MBTI-binary-clf-3rd' # Binary model 3rd dimension (F/T)\n",
+    "#model_name_or_path = 'Yuta555/Llama-2-7b-MBTI-binary-clf-4th' # Binary model 4th dimension (J/P)\n",
     "\n",
     "# Load configration, model, and tokenizer\n",
     "config = AutoConfig.from_pretrained(model_name_or_path)\n",
@@ -344,6 +349,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check with test data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -390,7 +402,7 @@
     "\n",
     "if dimension_id is not None:\n",
     "    assert dimension_id in range(0, 4), f\"dimension_id must be None or between 0 and 3\"\n",
-    "    dataset = dataset.map(lambda example: extract_nth_dimension(example, MBTI_dimension_idx))\n",
+    "    dataset = dataset.map(lambda example: extract_nth_dimension(example, dimension_id))\n",
     "#############################\n",
     "\n",
     "test_data = dataset['test']\n",
@@ -480,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
