--- a/data_preprocess/tweet_personality_detection.ipynb
+++ b/data_preprocess/tweet_personality_detection.ipynb
@@ -931,7 +931,7 @@
         "\"\"\"\n",
         "Put your OpenAI API Key here\n",
         "\"\"\"\n",
-        "openai.api_key = \"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\"\n",
+        "openai.api_key = \"#########\"\n",
         "\n",
         "\n",
         "def get_response(prompt):\n",
