--- a/data_preprocess/Tweet_Comments_Responses.ipynb
+++ b/data_preprocess/Tweet_Comments_Responses.ipynb
@@ -122,7 +122,7 @@
         "import openai\n",
         "\n",
         "# Replace 'YOUR_API_KEY' with your actual API key\n",
-        "openai.api_key = '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'\n",
+        "openai.api_key = 'YOUR_API_KEY'\n",
         "\n",
         "def generate_response(prompt):\n",
         "    messages = [\n",
