Worked on previous study's model
Calculated average scores across 4 dimensions.

--- a/personality_detection_model/previous_paper/replicate_previous_paper.ipynb
+++ b/personality_detection_model/previous_paper/replicate_previous_paper.ipynb
@@ -412,7 +412,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "/Users/yuta/Documents/GitHub/LLM-personality-evaluation.nosync/personality_detection_model/previous_paper/personality-prediction\n"
+          ]
+        }
+      ],
+      "source": [
+        "%cd personality-prediction"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -425,45 +442,85 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Accuracy for each dimension: {0: 0.7247, 1: 0.8606, 2: 0.7166, 3: 0.621}\n",
-            "Accuracy for 16 class classification: 0.2938\n"
+            "16-class model\n",
+            "- Accuracy: 0.294\n",
+            "- F1 score: 0.087\n",
+            "- Precision: 0.141\n",
+            "- Recall: 0.12\n",
+            "\n",
+            "Binary class model - Average score across 4 dimensions\n",
+            "- Accuracy: 0.731\n",
+            "- F1 score: 0.632\n",
+            "- Precision: 0.78\n",
+            "- Recall: 0.655\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/opt/homebrew/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n"
           ]
         }
       ],
       "source": [
         "from collections import defaultdict\n",
+        "import pandas as pd\n",
+        "from sklearn.metrics import accuracy_score, f1_score, recall_score, precision_score\n",
+        "\n",
         "\n",
         "ref_labels = pd.read_csv('data/kaggle/kaggle_test.csv')['type']\n",
-        "pred_labels = pd.read_csv('../outputs/explogs/test_prediction.csv')['pred_label']\n",
+        "pred_labels = pd.read_csv('explogs/test_prediction.csv')['pred_label']\n",
         "\n",
-        "cor_dict = defaultdict(int)\n",
-        "multi_cor_list = [] # list to store 1 if all dimension are correct, else 0\n",
+        "# 16 classes\n",
+        "acc = round(accuracy_score(ref_labels, pred_labels), 3)\n",
+        "f1 = round(f1_score(ref_labels, pred_labels, average=\"macro\"), 3)\n",
+        "pre = round(precision_score(ref_labels, pred_labels, average=\"macro\"), 3)\n",
+        "rec = round(recall_score(ref_labels, pred_labels, average=\"macro\"), 3)\n",
         "\n",
-        "for ref, pred in zip(ref_labels, pred_labels):\n",
-        "    multi_cor = 1\n",
-        "    for i in range(4):\n",
-        "        if ref[i] == pred[i]:\n",
-        "            cor_dict[i] += 1\n",
-        "            multi_cor *= 1\n",
-        "        else:\n",
-        "            multi_cor *= 0\n",
+        "print(\"16-class model\")\n",
+        "print(f\"- Accuracy: {acc}\")\n",
+        "print(f\"- F1 score: {f1}\")\n",
+        "print(f\"- Precision: {pre}\")\n",
+        "print(f\"- Recall: {rec}\")\n",
         "\n",
-        "    multi_cor_list.append(multi_cor)\n",
+        "# Four binary classes\n",
+        "metrics_dict = {\"Accuracy\": [], \"F1 score\": [], \"Precision\": [], \"Recall\": []}\n",
         "\n",
-        "total = len(ref_labels)\n",
-        "acc_dict = {idx: round(cor / total, 4) for idx, cor in sorted(cor_dict.items())}\n",
-        "print(f\"Accuracy for each dimension: {acc_dict}\")\n",
+        "ref_labels_sep = pd.DataFrame([list(label) for label in ref_labels])\n",
+        "pred_labels_sep = pd.DataFrame([list(label) for label in pred_labels])\n",
         "\n",
-        "multi_acc = round(sum(multi_cor_list) / total, 4)\n",
-        "print(f\"Accuracy for 16 class classification: {multi_acc}\")"
+        "columns = [\"1st_dim\", \"2nd_dim\", \"3rd_dim\", \"4th_dim\"]\n",
+        "ref_labels_sep.columns = columns\n",
+        "pred_labels_sep.columns = columns\n",
+        "\n",
+        "for col in columns:\n",
+        "    ref = [1 if label in [\"I\", \"F\", \"N\", \"J\"] else 0 for label in ref_labels_sep[col]]\n",
+        "    pred = [1 if label in [\"I\", \"F\", \"N\", \"J\"] else 0 for label in pred_labels_sep[col]]\n",
+        "    \n",
+        "    metrics_dict[\"Accuracy\"].append(accuracy_score(ref, pred))\n",
+        "    metrics_dict[\"F1 score\"].append(f1_score(ref, pred))\n",
+        "    metrics_dict[\"Precision\"].append(precision_score(ref, pred))\n",
+        "    metrics_dict[\"Recall\"].append(recall_score(ref, pred))\n",
+        "\n",
+        "avg_acc = round(sum(metrics_dict[\"Accuracy\"])/4, 3)\n",
+        "avg_f1 = round(sum(metrics_dict[\"F1 score\"])/4, 3)\n",
+        "avg_pre = round(sum(metrics_dict[\"Precision\"])/4, 3)\n",
+        "avg_rec = round(sum(metrics_dict[\"Recall\"])/4, 3)\n",
+        "\n",
+        "print()\n",
+        "print(\"Binary class model - Average score across 4 dimensions\")\n",
+        "print(f\"- Accuracy: {avg_acc}\")\n",
+        "print(f\"- F1 score: {avg_f1}\")\n",
+        "print(f\"- Precision: {avg_pre}\")\n",
+        "print(f\"- Recall: {avg_rec}\")"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "esJKrlyjBhTC"
-      },
+      "metadata": {},
       "outputs": [],
       "source": []
     }
@@ -488,7 +545,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.3"
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
